<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Afrikett</string>
    <string name="app_version_name" translatable="false">v0.01.082</string>
    <string name="app_copyright" translatable="false"><![CDATA[&copy; %1$s Neteru Studio]]></string>
    <string name="api_key" translatable="false">AIzaSyBKD_9jJQv9sf2D2N-1jUVYmBnrtKV0lNY</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Ouvrir le panneau de navigation</string>
    <string name="navigation_drawer_close">Fermer le panneau de navigation</string>
    <string name="nav_header_title">Nom Complet</string>
    <string name="nav_header_subtitle">00 00 00 00</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="search">Rechercher</string>
    <string name="slider_title_1">Diffusez rapidement</string>
    <string name="slider_title_2">Trouvez facilement</string>
    <string name="slider_title_3">Communiquez directement</string>
    <string name="slider_title_4">C\'est parti !</string>
    <string name="slider_summary_1">Annoncez vos produits, services et évenements à travers une vitrine entièrement personnalisée</string>
    <string name="slider_summary_2">Découvrez des offres de promotion, des évènements et trouvez les produits et services dont vous avez besoin</string>
    <string name="slider_summary_3">Achetez en contactant directement les vendeurs et chattez avec tous vos contacts présents sur la plateforme</string>
    <string name="slider_summary_4">Les bonnes affaires, c\'est ici et maintenant</string>
    <string name="share">Partager</string>
    <string name="share_text">Télécharger ici :\t</string>
    <string name="profile">Profil</string>
    <string name="home">Accueil</string>
    <string name="notifications">Notifications</string>
    <string name="subscriptions">Abonnement(s)</string>
    <string name="showcases">Vitrine(s)</string>
    <string name="add">Ajouter</string>
    <string name="manage">Gérer</string>
    <string name="others">Autres</string>
    <string name="settings">Paramètres</string>
    <string name="assistance">Assistance</string>
    <string name="about">A propos</string>
    <string name="toRegister">S\'inscrire</string>
    <string name="have_an_account">J\'ai déjà un compte</string>
    <string name="id_or_email">Identifiant ou email</string>
    <string name="password">Mot de passe</string>
    <string name="toLogin">Se connecter</string>
    <string name="forgot_password_indication_txt"><![CDATA[ <a href="#1" >Mot de passe oublié?</a> ]]></string>
    <string name="email_login_indication_txt"><![CDATA[ Vous n\'avez pas de compte ? <a href="#2">Inscrivez-vous</a>]]></string>
    <string name="email_registration_indication_txt"><![CDATA[ Vous avez déjà un compte ? <a href="#1">Connectez-vous ici</a>]]></string>
    <string name="social_registration">Inscription via les réseaux</string>
    <string name="email">Adresse email</string>
    <string name="id">Identifiant</string>
    <string name="complete_name">Nom complet</string>
    <string name="privacy_policy">Politique de confidentialité</string>
    <string name="login">Connexion</string>
    <string name="Registration">Inscription</string>
    <string name="login_failure">Echec de la connexion! vérifier les données fournies</string>
    <string name="google_but_text">Connexion avec Google</string>
    <string name="login_succes">Connexion réussie!</string>
    <string name="loading_in_progress">En cours de chargement…</string>
    <string name="search_hint">Rechercher un produit, un service ou un évènement</string>
    <string name="primary_color">Couleur Primaire</string>
    <string name="secondary_color">Couleur Secondaire</string>
    <string name="messenger">Messenger</string>
    <string name="just_now_str">À l\'instant</string>
    <string name="ago_min_str">Il y\'a %1$d minute(s)</string>
    <string name="ago_hour_str">Il y\'a %1$d heure(s)</string>
    <string name="ago_day_str">Il y\'a %1$d jour(s)</string>
    <string name="ago_week_str">Il y\'a %1$d semaine(s)</string>
    <string name="ago_month_str">Il y\'a %1$d mois</string>
    <string name="ago_year_str">Il y\'a %1$d an(s)</string>
    <string name="today">Aujourd\'hui</string>
    <string name="yesterday">Hier</string>
    <string name="day_before_yesterday">Avant-Hier</string>
    <string name="invalid_number">Numéro Invalide!</string>
    <string name="invalid_email">Email invalide!</string>
    <string name="number_verification_failure">Echec de la vérification du numéro</string>
    <string name="operation_failure">Echec de l\'opération, réessayez plus tard!</string>
    <string name="code_sended">Code Envoyé</string>
    <string name="code_sending_error">Erreur lors de l\'envoi du code, réessayez plus tard!</string>
    <string name="be_patient">Veuillez patienter…</string>
    <string name="verified_number">Numéro vérifié</string>
    <string name="verification_failure">Echec de la vérification, code erroné.</string>
    <string name="verification_activity_title"><![CDATA[Vérification de votre numéro : <b>+%1$s %2$s</b>]]></string>
    <string name="ok">OK</string>
    <string name="phone_dialog_message_b">Est-ce correct, ou voulez-vous le modifier ?</string>
    <string name="phone_dialog_message_a">Nous allons vérifier le numéro de téléphone:  +</string>
    <string name="manage_ur_showcase">Gérez vos vitrines</string>
    <string name="any_showcase">Aucune vitrine pour le moment!</string>
    <string name="missing_info">Informations manquantes</string>
    <string name="add_logo">Ajouter un logo</string>
    <string name="add_banner">Ajouter une bannière</string>
    <string name="permission_denied">Permission refusée</string>
    <string name="loading_failure">Echec du chargement</string>
    <string name="choose_activity_domain">Choisissez un domaine d\'activité!</string>
    <string name="insufficient_info">Informations insuffisantes</string>
    <string name="invite_a_friend">Inviter un(e) ami(e)</string>
    <string name="invitation_message">Afrikett est une plateforme où je diffuse et trouve plein d\'annonces intéressantes \n En téléchargement gratuit ici:</string>
    <string name="retrieving_contacts">Récupération des contacts…</string>
    <string name="contacts_loading">Chargement des contacts…</string>
    <string name="no_contact_found">Aucun contact trouvé!</string>
    <string name="error_occurred">Une erreur s\'est produite!</string>
    <string name="synchronization">Synchronisation…</string>
    <string name="contact">Contact</string>
    <string name="gallery">Galerie</string>
    <string name="select_an_image">Sélectionner une image</string>
    <string name="download_error">Erreur de téléchargement!</string>
    <string name="send_document">Envoyer un document</string>
    <string name="send_audio_file">Envoyer un fichier audio</string>
    <string name="send_contacts">Envoyer des contacts</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="pick_in_gallery">Selectionner dans la galerie</string>
    <string name="administrators">Administrateur(s)</string>
    <string name="subscribers">Abonné(s)</string>
    <string name="created_the">Créé le\t</string>
    <string name="begin">Commencer</string>
    <string name="add_showcase_instruction">Suivez ce guide et créer une vitrine pour diffuser vos annonces et promouvoir vos activités</string>
    <string name="ur_message">Votre Message</string>
    <string name="modify">Modifier</string>
    <string name="add_legend">Ajouter une légende</string>
    <string name="identify_ur_structure">Identité de votre structure :</string>
    <string name="name_of_showcase">Nom de votre structure</string>
    <string name="description_of_showcase">Description de vos activités</string>
    <string name="next">Suivant</string>
    <string name="fourth_step_title">Identité visuelle de votre structure:</string>
    <string name="banner_uppercase">BANNIERE</string>
    <string name="logo_uppercase">LOGO</string>
    <string name="second_color">Couleur Secondaire</string>
    <string name="save">Enregistrer</string>
    <string name="finalize_inscription">Finalisation de l\'inscription</string>
    <string name="full_name">Nom complet</string>
    <string name="email_address_optionnal">Adresse email(Facultatif)</string>
    <string name="second_step_title">Sélectionnez une catégorie</string>
    <string name="communication">Communication</string>
    <string name="trade">Commerce</string>
    <string name="information_science">Informatique</string>
    <string name="advertising">Publicité</string>
    <string name="craft_industry">Artisanat</string>
    <string name="other">Autre</string>
    <string name="agro">Agroalimentaire</string>
    <string name="get_phone_number_indication_txt"><![CDATA[Vous recevrez un code par SMS pour vérifier votre numéro de téléphone, vous pouvez également vous connecter via votre <a href="#1">adresse email</a>]]></string>
    <string name="third_step_title">Les contacts de votre structure :</string>
    <string name="phone">Téléphone</string>
    <string name="address_with_star">Adresse*</string>
    <string name="enter_the_code">Entrez le code</string>
    <string name="resend_sms">Renvoyer le SMS</string>
    <string name="verify_code">Vérifier le code</string>
    <string name="retry">Réessayer</string>
    <string name="banner">Banner</string>
    <string name="logo">Logo</string>
    <string name="chat_box_info_title">Informations sur la conversation</string>
    <string name="files">Fichiers</string>
    <string name="auto_download">Téléchargement automatique</string>
    <string name="silent_mode">Mode silencieux</string>
    <string name="report_contact">Signaler le contact</string>
    <string name="unblock">Débloquer</string>
    <string name="block">Bloquer</string>
    <string name="email_address">Adresse email</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Ajouter un contact</string>
    <string name="refresh">Actualiser</string>
    <string name="help">Aide</string>
    <string name="info">Infos</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="audio">Audio</string>
    <string name="popup_closing">Fermer</string>
    <string name="invite_friends">Inviter des amis</string>
    <string name="failure">Echec</string>
    <string name="content_could_not_loaded">Impossible de charger le contenu!</string>
    <string name="reload">Recharger</string>
    <string name="fashion_and_clothing"><![CDATA[Mode & Vêtement]]></string>
    <string name="entertainment">Divertissement</string>
    <string name="education_and_training"><![CDATA[Enseignement & Formation]]></string>
    <string name="finance_and_banking"><![CDATA[Finance & banque]]></string>
    <string name="transport_and_logistics"><![CDATA[Transport & Logistique]]></string>
    <string name="trade_and_distribution"><![CDATA[Commerce & Distribution]]></string>
    <string name="public_services">Services publics</string>
    <string name="hotel_business">Hôtellerie</string>
    <string name="health">Santé</string>
    <string name="professional_services">Services professionnels</string>
    <string name="retail_sale">Vente en détail</string>
    <string name="catering" tools:ignore="Typos">Restauration</string>
    <string name="contact_us_by_email">Contactez-nous par email</string>
    <string name="report_problem">Signaler un problème</string>
    <string name="app_informations">Infos sur l\'application</string>
    <string name="receive_notifications">Recevoir des notifications</string>
    <string name="account">Compte</string>
    <string name="invitation">Invitation</string>
    <string name="support">Support</string>
    <string name="to_disconnect">Se déconnecter</string>
</resources>