<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/attach_document"
        android:title="@string/document"
        android:icon="@drawable/ic_description_white_48dp" />

    <item
        android:id="@+id/attach_camera"
        android:title="@string/camera"
        android:icon="@drawable/ic_camera_white_48dp" />

    <item
        android:id="@+id/attach_gallery"
        android:title="@string/gallery"
        android:icon="@drawable/ic_insert_photo_white_48dp" />

    <item
        android:id="@+id/attach_audio"
        android:title="@string/audio"
        android:icon="@drawable/ic_headset_white_48dp" />

    <item
        android:id="@+id/attach_contact"
        android:title="@string/contact"
        android:icon="@drawable/ic_account_box_white_48dp" />

    <item
        android:id="@+id/attach_dismiss"
        android:title="@string/popup_closing"
        android:icon="@drawable/ic_keyboard_arrow_down_white_48dp" />

</menu>