<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search_white_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/invite_a_friend"
        android:id="@+id/action_invite"
        app:showAsAction="never" />

    <item
        android:title="@string/contacts"
        android:id="@+id/action_contact"
        app:showAsAction="never" />

    <item
        android:title="@string/add_contact"
        android:id="@+id/action_add"
        app:showAsAction="never"/>

    <item
        android:title="@string/refresh"
        android:id="@+id/action_refresh"
        app:showAsAction="never" />

    <item
        android:title="@string/help"
        android:id="@+id/action_help"
        app:showAsAction="never" />

</menu>