<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/state_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginBottom="@dimen/state_item_margin_bottom"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/state_title"
        style="@style/StatusPage.title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/state_item_margin_bottom"
        android:text="@string/failure" />

    <TextView
        android:id="@+id/state_description"
        style="@style/StatusPage.description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/state_item_margin_bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/content_could_not_loaded" />

    <Button
        android:id="@+id/state_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:visibility="gone"
        android:id="@+id/state_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>