<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    tools:context=".ui.activities.others_activities.AboutActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textStyle="normal"/>

        <TextView
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_version_name"
            android:textColor="@color/silver"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/overlay_top_2"
            android:layout_marginBottom="@dimen/current_margin_2"
            app:srcCompat="@drawable/afrikett_launch"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:textStyle="normal"
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_copyright"
            android:textColor="@color/whitesmoke"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>